--- a/sections/testimonials.liquid
+++ b/sections/testimonials.liquid
@@ -80,12 +80,12 @@
     style="{{- variables | escape -}}"
   >
     <div class="testimonials__container container">
-      {%- if title != blank or image_background != blank -%}
-        <div class="testimonials__side{% if title == blank and image_background != blank %} testimonials__side--desktop-hidden{%- endif -%}">
+      {%- if title != blank -%}
+        <div class="testimonials__side">
           <h2 class="testimonials__title h4">{{- title -}}</h2>
 
           {%- if image_background.url != blank -%}
-            <div class="testimonials__bg-image-wrapper">
+            <div class="testimonials__bg-image-holder">
               {%- render 'image',
                   image: image_background,
                   image_alt: image_background_alt,
