--- a/sections/image-gallery.liquid
+++ b/sections/image-gallery.liquid
@@ -84,7 +84,7 @@
           {%- for block in section.blocks -%}
             {%- assign image     = block.settings.image -%}
             {%- assign image_alt = block.settings.image_alt -%}
-            {%- assign url.      = block.settings.url -%}
+            {%- assign url       = block.settings.url -%}
 
             {%- if image.url != blank -%}
               {%- assign image = image -%}
