Fix very large size of collection images

--- a/sections/collections.liquid
+++ b/sections/collections.liquid
@@ -124,7 +124,8 @@
             placeholder: image_placeholder,
             settings: settings,
             counter_singular: counter_singular,
-            counter_plural: counter_plural
+            counter_plural: counter_plural,
+            image_ratio: false
         -%}
     {%- unless full_width -%}
       </div>
