--- a/sections/list-collections.liquid
+++ b/sections/list-collections.liquid
@@ -127,7 +127,8 @@
               placeholder: image_placeholder,
               settings: settings,
               counter_singular: counter_singular,
-              counter_plural: counter_plural
+              counter_plural: counter_plural,
+              image_ratio: false
           -%}
 
           {%- if full_width -%}
