--- a/snippets/collections-grid.liquid
+++ b/snippets/collections-grid.liquid
@@ -8,7 +8,8 @@
   show_amount - boolean optional,
   show_arrow - boolean optional,
   placeholder - image optional,
-  counter_label - "string" optional
+  counter_label - "string" optional,
+  image_ratio - boolean optional
 
   Usage:
 
@@ -20,7 +21,8 @@
       placeholder: your_id,
       settings: settings,
       counter_singular: your_id,
-      counter_plural: your_id
+      counter_plural: your_id,
+      image_ratio: your_id
   -%}
 
 {% endcomment %}
@@ -73,7 +75,8 @@
           image: image,
           image_alt: name,
           image_class: 'collections__image',
-          image_size: 'm'
+          image_size: 'm',
+          use_ratio: image_ratio
         -%}
       </span>
 
