Fix placeholder color of variation select

--- a/snippets/root-styles.liquid
+++ b/snippets/root-styles.liquid
@@ -26,6 +26,7 @@
       --color-outline-hover:       {{ scheme.settings.color_accent_outline | append: 'CC' }};
       --color-image-placeholder:   {{ scheme.settings.color_primary | append: "26" }};
       --color-placeholder:         {{ scheme.settings.color_primary | append: "4D" }};
+      --color-variant-placeholder: {{ scheme.settings.color_primary | append: "A6" }};
       --color-border:              {{ scheme.settings.color_primary | append: "26" }};
     }
   {% endfor %}
