--- a/snippets/variables-product-variations.liquid
+++ b/snippets/variables-product-variations.liquid
@@ -15,5 +15,6 @@
     --variation-select-control-height: 50px;
     --variation-select-font-size: var(--font-size-regular);
     --variation-select-padding: 0 40px 0 10px;
+    --variation-select-placeholder-color: var(--color-variant-placeholder);
   }
 {%- endstyle -%}
