add recommendation hints to images

--- a/sections/articles.liquid
+++ b/sections/articles.liquid
@@ -460,7 +460,8 @@
           {
             "type": "image_picker",
             "id": "image",
-            "label": "Image"
+            "label": "Image",
+            "info": "Recommended: JPEG image, 1200x1200 pixels or larger."
           },
           {
             "type": "header",
