--- a/sections/columns.liquid
+++ b/sections/columns.liquid
@@ -197,7 +197,8 @@
           {
             "type": "image_picker",
             "id": "image",
-            "label": "Image (optional)"
+            "label": "Image (optional)",
+            "info": "Recommended: JPEG image, 1200x1200 pixels or larger."
           },
           {
             "type": "header",
