--- a/sections/testimonials.liquid
+++ b/sections/testimonials.liquid
@@ -243,7 +243,8 @@
       {
         "type": "image_picker",
         "id": "image_background",
-        "label": "Image (optional)"
+        "label": "Image (optional)",
+        "info": "Recommended: JPEG image, 1200x1200 pixels or larger."
       },
       {
         "type": "select",
@@ -374,7 +375,8 @@
             "type": "image_picker",
             "id": "image",
             "label": "Picture",
-            "default": "booqable://assets/image-avatar-1.png"
+            "default": "booqable://assets/image-avatar-1.png",
+            "info": "Recommended: JPEG image, 1200x1200 pixels or larger."
           },
           {
             "type": "text",
