--- a/sections/title.liquid
+++ b/sections/title.liquid
@@ -213,7 +213,8 @@
         "type": "image_picker",
         "id": "image",
         "label": "Image (optional)",
-        "default": "booqable://assets/image-placeholder.png"
+        "default": "booqable://assets/image-placeholder.png",
+        "info": "Recommended: JPEG image, 1200x1200 pixels or larger."
       },
       {
         "type": "select",
