--- a/sections/accept-invitation-form.liquid
+++ b/sections/accept-invitation-form.liquid
@@ -166,7 +166,8 @@
       {
         "type": "image_picker",
         "id": "image",
-        "label": "Background image"
+        "label": "Background image",
+        "info": "Recommended: JPEG image, 1920x1080 pixels or larger."
       },
       {
         "type": "select",
