--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -269,7 +269,8 @@
       {
         "type": "image_picker",
         "id": "logo",
-        "label": "Logo"
+        "label": "Logo",
+        "info": "Recommended: PNG image, 1200x1200 pixels or larger."
       },
       {
         "type": "text",
