--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -401,13 +401,14 @@
       {
         "type": "image_picker",
         "id": "logo",
-        "label": "Logo"
+        "label": "Logo",
+        "info": "Recommended: PNG image, 1200x1200 pixels or larger."
       },
       {
         "type": "image_picker",
         "id": "logo_transparent",
         "label": "Logo (optional)",
-        "info": "Will be shown while the header has a transparent background"
+        "info": "Will be shown while the header has a transparent background. Recommended: PNG image, 1200x1200 pixels or larger."
       },
       {
         "type": "text",
