--- a/sections/image-gallery.liquid
+++ b/sections/image-gallery.liquid
@@ -283,7 +283,8 @@
           {
             "type": "image_picker",
             "id": "image",
-            "label": "Image"
+            "label": "Image",
+            "info": "Recommended: JPEG image, 1200x1200 pixels or larger."
           },
           {
             "type": "url",
