--- a/sections/spacer.liquid
+++ b/sections/spacer.liquid
@@ -63,7 +63,8 @@
       {
         "type": "image_picker",
         "id": "image",
-        "label": "Image (optional)"
+        "label": "Image (optional)",
+        "info": "Recommended: JPEG image, 1920x1080 pixels or larger."
       },
       {
         "type": "header",
