--- a/sections/call-to-action.liquid
+++ b/sections/call-to-action.liquid
@@ -227,7 +227,7 @@
         "type": "image_picker",
         "id": "tag_image",
         "label": "Tagline image (optional)",
-        "info": "Shown above the tagline text. Recommended: JPEG image, 1200x1200 pixels or larger."
+        "info": "Shown above the tagline text. Recommended: PNG image, 200x200 pixels or larger."
       },
       {
         "type": "text",
@@ -263,7 +263,7 @@
         "id": "image",
         "label": "Image (optional)",
         "default": "booqable://assets/image-placeholder.png",
-        "info": "Recommended: JPEG image, 1200x1200 pixels or larger."
+        "info": "Recommended: JPEG image, 2560x1440 pixels or larger."
       },
       {
         "type": "checkbox",
