Update video embed URLs to enhance privacy and compliance

--- a/sections/hero.liquid
+++ b/sections/hero.liquid
@@ -237,7 +237,7 @@
               class="hero__video"
               width="1920"
               height="1080"
-              src="https://www.youtube.com/embed/{{- video_id -}}?playlist={{- video_id -}}&autoplay=1&mute=1&loop=1&controls=0&disablekb=1&fs=0&playsinline=1&enablejsapi=1&iv_load_policy=3&modestbranding=1"
+              src="https://www.youtube-nocookie.com/embed/{{- video_id -}}?playlist={{- video_id -}}&autoplay=1&mute=1&loop=1&controls=0&disablekb=1&fs=0&playsinline=1&enablejsapi=1&iv_load_policy=3&modestbranding=1"
               frameborder="0"
               allow="autoplay; muted; encrypted-media; fullscreen"
               allowfullscreen
@@ -255,7 +255,7 @@
           <div class="hero__vision-wrapper{% if show_overlay %} hero__vision-wrapper--overlay{%- endif -%}">
             <iframe
               class="hero__video"
-              src="https://player.vimeo.com/video/{{- video_id -}}?autoplay=1&muted=1&loop=1&autopause=0&controls=0&background=1"
+              src="https://player.vimeo.com/video/{{- video_id -}}?autoplay=1&muted=1&loop=1&autopause=0&controls=0&background=1&dnt=1"
               width="1920"
               height="1080"
               frameborder="0"
