rename settings and vars

--- a/sections/product-page.liquid
+++ b/sections/product-page.liquid
@@ -7,8 +7,16 @@
 {%- assign color_scheme                  = section.settings.color_scheme -%}
 {%- assign description                   = product.description -%}
 {%- assign description_placement         = section.settings.description_placement -%}
+{%- assign enable_controls_desktop       = section.settings.show_controls -%}
+{%- assign enable_controls_mobile        = section.settings.enable_controls_mobile -%}
+{%- assign enable_thumbnails_desktop     = section.settings.show_thumbnails -%}
+{%- assign enable_thumbnails_mobile      = section.settings.enable_thumbnails_mobile -%}
 {%- assign images                        = product.images -%}
+{%- assign infinite_scroll_desktop      = section.settings.infinity_scroll -%}
+{%- assign infinite_scroll_mobile       = section.settings.infinite_scroll_mobile -%}
 {%- assign message_label                 = section.settings.message_label -%}
+{%- assign object_fit_desktop            = section.settings.object_fit_desktop -%}
+{%- assign object_fit_mobile             = section.settings.object_fit_mobile -%}
 {%- assign padding_top                   = section.settings.padding_top -%}
 {%- assign padding_bottom                = section.settings.padding_bottom -%}
 {%- assign padding_top_mobile            = section.settings.padding_top_mobile -%}
@@ -17,14 +25,6 @@
 {%- assign show_breadcrumbs              = section.settings.show_breadcrumbs -%}
 {%- assign show_border                   = section.settings.show_border -%}
 {%- assign show_carousel                 = section.settings.show_carousel -%}
-{%- assign object_fit_desktop           = section.settings.object_fit_desktop -%}
-{%- assign object_fit_mobile            = section.settings.object_fit_mobile -%}
-{%- assign enable_thumbnails_desktop    = section.settings.enable_thumbnails_desktop -%}
-{%- assign enable_thumbnails_mobile     = section.settings.enable_thumbnails_mobile -%}
-{%- assign infinite_scroll_desktop      = section.settings.infinite_scroll_desktop -%}
-{%- assign infinite_scroll_mobile       = section.settings.infinite_scroll_mobile -%}
-{%- assign enable_controls_desktop      = section.settings.enable_controls_desktop -%}
-{%- assign enable_controls_mobile       = section.settings.enable_controls_mobile -%}
 {%- assign title                         = product.name -%}
 {%- assign variant_label                 = 'store.variant' | user_t -%}
 {%- assign variants                      = product.variants -%}
@@ -321,7 +321,7 @@
       },
       {
         "type": "header",
-        "content": "Carousel settings"
+        "content": "Carousel"
       },
       {
         "type": "checkbox",
@@ -330,14 +330,13 @@
         "label": "Show product images in carousel"
       },
       {
-        "type": "header",
-        "content": "Desktop Carousel"
+        "type": "paragraph",
+        "content": "These settings will apply to the carousel on desktop devices."
       },
       {
         "type": "select",
         "id": "image_fit_desktop",
         "label": "Display images as",
-        "mode": "select",
         "options": [
           {
             "value": "cover",
@@ -352,31 +351,30 @@
       },
       {
         "type": "checkbox",
-        "id": "enable_controls_desktop",
+        "id": "show_controls",
         "label": "Show navigation buttons",
         "default": true
       },
       {
         "type": "checkbox",
-        "id": "enable_thumbnails_desktop",
+        "id": "show_thumbnails",
         "label": "Show thumbnails",
         "default": true
       },
       {
         "type": "checkbox",
-        "id": "infinite_scroll_desktop",
+        "id": "infinity_scroll",
         "label": "Infinity scroll",
         "default": true
       },
-        {
-          "type": "header",
-          "content": "Mobile Carousel"
-        },
-        {
+      {
+        "type": "paragraph",
+        "content": "These settings will apply to the carousel on mobile devices."
+      },
+      {
         "type": "select",
         "id": "image_fit_mobile",
         "label": "Display images as",
-        "mode": "select",
         "options": [
           {
             "value": "cover",
